# echo-app

./: .dockerignore  .gitignore  README.md  azure.yaml  docker-compose.yml  manual_setup.sh  setup_github_cicd.sh  setup_local_auth.sh  smoke_tests.sh  verify_cosmos.sh
.devcontainer/: devcontainer.json
.github/workflows/: azure-dev.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  foundry_client.py  personas.py  session_store.py
backend/app/auth/: __init__.py  config.py  dependencies.py  token_validator.py
backend/app/db/: __init__.py  cosmos.py
backend/app/models/: __init__.py  card.py  deck.py  learn.py  learn_agents.py
backend/app/repositories/: __init__.py  card_repository.py  deck_repository.py
backend/app/routers/: __init__.py  cards.py  decks.py  learn.py  seed.py
backend/app/srs/: __init__.py  grading.py  sm2.py  time.py
backend/tests/: __init__.py  conftest.py  test_agent_driven_grading.py  test_api_integration.py  test_auth.py  test_cosmos.py  test_deck_language.py  test_grade_heuristic.py  test_learn_agents_chat.py  test_learn_api.py  test_session_store.py  test_sm2.py  test_srs_time.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: README-icons.md  manifest.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
infra/: main.bicep  main.json
(+37 files in other folders)
